[workspace]
    default_members = ["winmmf"]
    members         = ["winmmf", "winmmf-ffi"]
    resolver        = "2"

    [workspace.package]
        authors     = ["Riven Skaye <riven@tae.moe"]
        categories  = ["filesystem", "memory-management", "os::windows-apis"]
        description = "Crates to use Windows' Memory Mapped Files with Rust. Now including FFI!"
        edition     = "2021"
        homepage    = "https://skaye.blog/winmmf/overview"
        keywords    = ["ipc", "shared-mem", "shmem", "windows", "winmmf"]
        license     = "MPL-2.0"
        readme      = "README.md"
        repository  = "https://github.com/RivenSkaye/WinMMF-rs"
        version     = "0.2.0"
