[package]
    authors.workspace    = true
    categories.workspace = true
    description          = "A wrapper for WinMMF to make it usable as a cdylib."
    edition.workspace    = true
    homepage.workspace   = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "winmmf-ffi"
    readme               = "README.md"
    repository.workspace = true
    rust-version         = "1.75"
    version              = "0.2.2"

[dependencies]
    ffi-support = {version = "0.4"}
    winmmf      = {path = "../winmmf", version = "0.2"}

[build-dependencies]
    csbindgen = "1.9"

[package.metadata.docs.rs]
    default-target = "x86_64-pc-windows-msvc"
    rustc-args     = ["--cfg", "docsrs"]
    rustdoc-args   = ["--cfg", "docsrs"]
    targets        = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[lib]
    # Sorry folks, no rlibs here. If you want Named Shared Memory in your
    # Rust project, use winmmf itself. That compiles to rlib and dylib formats.
    bench      = false
    crate-type = ["cdylib", "staticlib"]
