[package]
    authors.workspace    = true
    categories.workspace = true
    description          = "A mostly safe Rust wrapper around Named Shared Memory on Windows. WIP"
    edition.workspace    = true
    homepage.workspace   = true
    keywords.workspace   = true
    license.workspace    = true
    name                 = "winmmf"
    readme               = "README.md"
    repository.workspace = true
    version.workspace    = true

[dependencies]
    fixedstr = {workspace = true}
    microseh = "1.1"
    windows = {version = "0.58", features = [
        "Win32_Foundation",
        "Win32_Security",
        "Win32_Storage",
        "Win32_Storage_FileSystem",
        "Win32_System_Memory"
    ]}
    windows-ext = "0.0.3"

[features]
    default    = ["impl_lock", "impl_mmf"]
    impl_lock  = []
    impl_mmf   = ["namespaces"]
    namespaces = []

[package.metadata.docs.rs]
    default-target = "x86_64-pc-windows-msvc"
    rustc-args     = ["--cfg", "docsrs"]
    rustdoc-args   = ["--cfg", "docsrs"]
    targets        = ["i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[lib]
    # sorry folks, but this lib is only meant to be used from other Rust crates.
    # Use winmmf-ffi if you want a cdylib with exported symbols that aren't clobbered or mangled.
    bench      = false
    crate-type = ["dylib", "rlib"]
